--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="home">
     <div class="container">
-      <h1>Bienvenidos a Casa Abierta</h1>
+      <h1>Bienvenidos a MlM</h1>
       <p>Explora nuestras obras teatrales, conoce nuestro equipo y descubre más sobre nuestro trabajo.</p>
     </div>
   </section>
