--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,13 @@
 <section class="home">
     <div class="container">
-      <h1>Bienvenidos a MlM</h1>
-      <p>Explora nuestras obras teatrales, conoce nuestro equipo y descubre más sobre nuestro trabajo.</p>
+      <div class="card">
+        <div class="card-header">
+          <h2>bienvenido a Mi lugar en el Mundo</h2>
+        </div>
+        <div class="card-body">
+            <p>Explora nuestras obras teatrales, conoce nuestro equipo y descubre más sobre nuestro trabajo.</p>
+        </div>
+      </div>
     </div>
   </section>
   
